--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="board/layout/basic">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="board/layout/basic">
 <th:block layout:fragment="title">
     <title>this is view page</title>
 </th:block>
-
+<th:block layout:fragment="modal">
+    <div id="commentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="modalWriter" class="col-form-label">작성자</label>
+                            <input type="text" id="modalWriter" class="form-control" placeholder="작성자를 입력해 주세요." />
+                        </div>
+                        <div class="form-group">
+                            <label for="modalContent" class="col-form-label">내용</label>
+                            <textarea id="modalContent" class="form-control" placeholder="내용을 입력해 주세요."></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btnModalCancel" class="btn btn-default waves-effect waves-light" data-dismiss="modal">취소하기</button>
+                    <button type="button" id="btnCommentUpdate" class="btn btn-primary waves-effect waves-light" onclick="updateComment()">수정하기</button>
+                    <button type="button" id="btnCommentDelete" class="btn btn-danger waves-effect waves-light">삭제하기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="content">
     <div class="card-content">
         <form class="form-horizontal form-view" th:object="${board}">
@@ -44,13 +74,21 @@
         </form>
 
         <div class="btn_wrap text-center" th:object="${params}">
-            <a th:href="|@{/board/list.do}*{makeQueryString(currentPageNo)}|" class="btn btn-default waves-effect waves-light">뒤로가기</a>
-            <a th:href="|@{/board/write.do}*{makeQueryString(currentPageNo)}&idx=${board.idx}|" class="btn btn-primary waves-effect waves-light">수정하기</a>
-            <button type="button" class="btn btn-danger waves-effect waves-light" th:onclick="deleteBoard([[ ${board.idx}]], [[*{makeQueryString(currentPageNo)}]])">삭제하기</button>
+            <a th:href="|@{/board/list.do}*{makeQueryString(currentPageNo)}|"
+               class="btn btn-default waves-effect waves-light">뒤로가기</a>
+            <a th:href="|@{/board/write.do}*{makeQueryString(currentPageNo)}&idx=${board.idx}|"
+               class="btn btn-primary waves-effect waves-light">수정하기</a>
+            <button type="button" class="btn btn-danger waves-effect waves-light"
+                    th:onclick="deleteBoard([[ ${board.idx}]], [[*{makeQueryString(currentPageNo)}]])">삭제하기
+            </button>
         </div>
     </div>
     <!-- /.card-content -->
 </th:block>
+
+
+
+
 
 <th:block layout:fragment="add-content">
     <div class="box-content">
@@ -62,24 +100,14 @@
 
             <form class="form-horizontal form-view">
                 <div class="input-group margin-bottom-20">
-                    <input type="email" class="form-control" placeholder="">
-                    <div class="input-group-btn"><button type="button" class="btn waves-effect waves-light"><i class="fa fa-commenting" aria-hidden="true"></i></button></div>
-                    <!-- /.input-group-btn -->
+                    <input type="text" id="content" class="form-control" >
+                    <div class="input-group-btn">
+                        <button type="button" class="btn waves-effect waves-light" th:onclick="insertComment([[ ${board.idx}]])">
+                            <i class="fa fa-commenting"></i>
+                        </button>
+                    </div>
                 </div>
-                <ul class="notice-list">
-                    <li>
-                        <span class="name">이현규</span>
-                        <span class="desc">이현규_내용</span>
-                        <span class="time">2021-04-08</span>
-                        <button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
-                    </li>
-                    <li>
-                        <span class="name">계중이</span>
-                        <span class="desc">강계중 내용2</span>
-                        <span class="time">22021-04-08</span>
-                        <button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
-                    </li>
-                </ul>
+                <ui class="notice-list"></ui>
             </form>
         </div>
         <!-- /.card-content -->
@@ -90,17 +118,146 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript">
         /*<![CDATA[*/
+        $(function() {
+            printCommentList();
+        });
+        function openModal(idx, writer, content) {
+            $("#commentModal").modal("toggle");
+
+            document.getElementById("modalWriter").value = writer;
+            document.getElementById("modalContent").value = content;
+
+            document.getElementById("btnCommentUpdate").setAttribute("onclick", "updateComment(" + idx +")");
+            document.getElementById("btnCommentDelete").setAttribute("onclick", "deleteComment(" + idx +")");
+        }
+        function deleteComment(idx) {
+            if (!confirm('댓글을 삭제 하시겠어요?')){
+                return false;
+            }
+
+            var uri = [[ @{/comments/} ]] + idx;
+            var headers = {"Content-Type": "application/json", "X-HTTP-Method-Override": "DELETE"};
+
+            $.ajax({
+                url: uri,
+                type: "DELETE",
+                headers: headers,
+                success: function (response) {
+                    if (response.result == false) {
+                        alert("댓글 삭제에 실패 하였습니다.");
+                        return false;
+                    }
+
+                    printCommentList();
+                    $("#commentModal").modal("hide");
+                },
+                error: function (xhr, status, error) {
+                    alert("에러가 발생하였습니다");
+                    return false;
+                }
+            });
+        }
+
+        function insertComment(boardIdx) {
+            var content = document.getElementById("content");
+            if (isEmpty(content.value) == true) {
+                content.setAttribute("placeholder", "댓글을 입력 해주세요");
+                content.focus();
+                return false;
+            }
+            var uri = /*[[ @{/comments} ]]*/;
+            var headers = {"Content-Type": "application/json", "X-HTTP-Method-Override": "POST"};
+            var params = {"boardIdx" : boardIdx, "content" : content.value, "writer" : "관리자"};
+
+            $.ajax({
+                url: uri,
+                type: "POST",
+                headers: headers,
+                dataType: "json",
+                data: JSON.stringify(params),
+                success: function(response) {
+                    if (response.result == false) {
+                        alert("댓글 등록에 실패하였습니다.");
+                        return false;
+                    }
+
+                    printCommentList();
+                    content.value = "";
+                },
+                error: function(xhr, status, error) {
+                    alert("에러가 발생하였습니다.");
+                    return false;
+                }
+            });
+        }
+
+        function updateComment(idx) {
+            var writer = document.getElementById("modalWritero");
+            var content = document.getElementById("modalContent");
+
+            var uri = [[ @{/comments/} ]] + idx;
+            var headers = {"Content-Type": "application/json", "X-HTTP-Method-Override": "PATCH"};
+            var params = {"idx": idx, "writer": writer.value, "content": content.value};
+
+            $.ajax({
+               url: uri,
+                type: headers,
+                dataType: "json",
+                data: JSON.stringify(params),
+                success: function(response) {
+                   if (response == false) {
+                       alert("댓글 수정에 실패 했습니다.");
+                       return false;
+                   }
+
+                    printCommentList();
+                    $("#commentModal").modal("hide");
+                },
+                error: function(xhr, status, error) {
+                   alert("에러가 발생");
+                   return false;
+                }
+
+            });
+
+        }
+
+        function printCommentList() {
+            var uri = /*[[ @{/comments/} + ${board.idx} ]]*/;
+
+            $.get(uri, function (response) {
+                if (isEmpty(response) == false) {
+                    var commentsHtml = "";
+
+                    $(response.commentList).each(function (idx, comment) {
+                        commentsHtml += `
+                       <li>
+					  	    <span class="name">${comment.writer}</span>
+						    <span class="desc">${comment.content}</span>
+						    <span class="time">${moment(comment.insertTime).format('YYYY-MM-DD HH:mm:ss')}</span>
+						    <button type="button" onclick="openModal(${comment.idx}, '${comment.writer}', '${comment.content}')" class="btn btn-xs btn-circle"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i></button>
+                       </li>
+					`;
+                    });
+
+                    $(".notice-list").html(commentsHtml);
+                }
+            }, "json");
+        }
+
+        /*[- end of function -]*/
+
         function deleteBoard(idx, queryString) {
             if (confirm(idx + "번 게시글을 삭제할까요?")) {
                 var uri = /*[[ @{/board/delete.do} ]]*/;
                 var html = "";
 
-                html += '<form name="dataForm" action="'+uri+'" method="post">';
-                html += '<input type="hidden" name="idx" value="'+idx+'" />';
+                html += '<form name="dataForm" action="' + uri + '" method="post">';
+                html += '<input type="hidden" name="idx" value="' + idx + '" />';
 
                 /*[- 쿼리 스트링을 오브젝트 형태로 변환 -]*/
                 queryString = new URLSearchParams(queryString);
-                queryString.forEach(function(value, key) {
+                queryString.forEach(function (value, key) {
                     if (isEmpty(value) == false) {
                         html += '<input type="hidden" name="' + key + '" value="' + value + '" />';
                     }
@@ -112,6 +269,7 @@
                 document.dataForm.submit();
             }
         }
+
         /*[- end of function -]*/
 
         /*]]>*/
